# mcp-fs

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test-local.bat  test-local.sh  test_config.example.yaml  test_config.yaml
.agent_docs/: architecture.md  authorization.md  backends.md  integration.md  local-testing.md  makefile.md  python.md  tools.md  webui.md
config/: local.yaml  moto.yaml  prod.yaml  test-local.yaml
config-examples/mcp-fs/: agents.yaml
config-examples/mcp-fs/prompts/: system.md
scripts/: gen-jwt-demo-keys.sh  gen_jwt_keys.py  mint-token.sh  mint_token.py  provision.py  smoke.py  test_local_prepare.py
specs/: BACKLOG.md
src/mcp_fs/: __init__.py  admin_tools.py  backends.py  config.py  context.py  dataplane.py  docx_writer.py  extract.py  fs_ops.py  identity.py  logging_config.py  manager.py  mcp_fs.py  minio_blob.py  models.py  protocols.py  safety.py  server.py  sqlite_admin.py  sqlite_db.py  sqlite_meta.py  tracing.py  treesitter.py  version.py  volume.py  webui.py
src/mcp_fs/fs_tools/: documents.py  edit.py  lifecycle.py  listing.py  metadata.py  patch_v4a.py  read.py  search.py  write.py
src/mcp_fs/static/css/: app.css
src/mcp_fs/static/css/themes/: carbon.css  ei.css
src/mcp_fs/static/js/: app.js
src/mcp_fs/templates/: base.html  index.html  login.html
tests/: conftest.py  test_cli.py  test_dataplane_parity.py  test_documents_tools.py  test_extract.py  test_http_e2e.py  test_identity.py  test_server.py  test_sqlite_meta.py  test_tracing.py  test_units.py  test_webui.py
tests/functional/: test_admin.py  test_fs_tools.py
tests/integration/: test_live_stack.py
