[project]
name = "mcp-fs"
version = "0.1.0"
description = "Pure-Python streamable-HTTP MCP server exposing a simulated multi-project filesystem (SQLite metadata, object-store blobs)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Sebastien MORAND", email = "seb.morand@gmail.com" }
]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mcp>=1.2.0",
    "aioboto3>=13.2.0",
    "pyjwt[crypto]>=2.10.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.4.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
    "types-pyyaml>=6.0.12",
    "moto[server]>=5.2.2",
]

[project.scripts]
mcp-fs = "mcp_fs.mcp_fs:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fs"]

# Ruff (Linting + Formatting)
[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "B008",    # Do not perform function call in argument defaults (needed for FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "S101", "PLC0415", "SLF001", "TC001", "TC002", "TC003", "N801", "N802", "N803"]
# Operational helper scripts: magic values (ports, status codes) are fine inline.
"scripts/*" = ["PLR2004", "PLR0915"]
# Tool-registration modules define many nested tool closures in one function.
"src/mcp_fs/fs_tools/*" = ["PLR0915"]
"src/mcp_fs/admin_tools.py" = ["PLR0915"]

[tool.ruff.lint.isort]
known-first-party = ["mcp_fs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# mypy (Type Checking)
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "opentelemetry.*",
    "uvicorn.*",
    "aioboto3.*",
    "botocore.*",
    "tree_sitter_language_pack.*",
]
ignore_missing_imports = true

# bandit (security)
[tool.bandit]
exclude_dirs = ["tests"]

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that require a live MinIO/S3 stack (deselect with -m 'not integration')",
]

# Coverage
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
fail_under = 80
show_missing = true
